@@ -84,17 +84,21 @@ public class SizeFragment extends BaseFragment
     });
     binding.toolbarSize.setOnMenuItemClickListener(item -> {
       int id = item.getItemId();
-      if (id == R.id.action_share) {
+      if (id == R.id.action_feedback) {
+        navigate(SizeFragmentDirections.actionSizeToFeedbackDialog());
+        performHapticClick();
+      } else if (id == R.id.action_help) {
+        SizeFragmentDirections.ActionSizeToTextDialog action
+            = SizeFragmentDirections.actionSizeToTextDialog();
+        action.setFile(R.raw.help);
+        action.setTitle(R.string.action_help);
+        navigate(action);
+        performHapticClick();
+      } else if (id == R.id.action_share) {
         ResUtil.share(activity, R.string.msg_share);
         performHapticClick();
-        return true;
-      } else if (id == R.id.action_feedback) {
-        performHapticClick();
-        navigate(SizeFragmentDirections.actionSizeToFeedbackDialog());
-        return true;
-      } else {
-        return false;
       }
+      return true;
     });
 
     binding.sliderSizeScale.setValue(
