@@ -23,13 +23,18 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
-    android:id="@+id/action_share"
-    android:title="@string/action_share"
+    android:id="@+id/action_feedback"
+    android:title="@string/action_send_feedback"
     app:showAsAction="never" />
 
   <item
-    android:id="@+id/action_feedback"
-    android:title="@string/action_send_feedback"
+    android:id="@+id/action_help"
+    android:title="@string/action_help"
+    app:showAsAction="never" />
+
+  <item
+    android:id="@+id/action_share"
+    android:title="@string/action_share"
     app:showAsAction="never" />
 
 </menu>
