@@ -12,29 +12,6 @@ They are completely recreated from scratch, nothing except the look is taken fro
 - Also suitable for larger devices like tablets (scaling option available)
 - Many additional customization options
 
-<b>Troubleshooting:</b>
-
-Parallax on page swipe doesn't work?
-You need to turn on background scrolling in your launcher's settings if you have disabled it before.
-
-"Set wallpaper" button disappears after applying the wallpaper?
-This is intended, you only have to apply it once. Select another wallpaper design in the appearance section to change it.
-
-Changed wallpaper colors not updating on Android 12?
-You need to turn off your screen. The next time you turn it back on, the new colors should be applied to the whole system. It might require some interaction with the device for the home screen widgets to also update their colors.
-
-Parallax/zoom animations stop after closing Doodle settings?
-This seems like a bug of MIUI 12.5, if you instead apply the wallpaper in your system's wallpaper picker it should work. This possibility is also explained when you long-tap on the big button to set the wallpaper.
-
-Wallpaper not applied to lockscreen?
-Try searching for your device's name and this question on the Internet to get possible solutions.
-
-You don't want the wallpaper to be applied to your lockscreen?
-If your device doesn't display you the option to apply it only to your home screen, then this is not supported by your device.
-
-Custom shapes like on Pixel 4 are not available for Doodle collection?
-This feature is not supported by this app. The rendering method doesn't support dynamic changes like custom shapes, a replication of this feature would be way too time consuming.
-
 <b>Not enough options?</b>
 
 There won't be many more wallpapers added to this app in the future. Doodle is about doodle-styled, flat-shaped (non-3D) original Google Pixel wallpapers (with a few exceptions), these criteria are not met by many of them out there.
