@@ -1,4 +1,5 @@
 5.4.0:
+- Improved: new help dialog accessible from top right menus
 - Improved: dialog appearance on large screens
 
 5.3.0:
